[project]
name = "diffusers-benchmark"
version = "0.1.0"
description = "Stage-level benchmark script for FLUX pipelines in Hugging Face diffusers."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "accelerate>=1.0.0",
    "diffusers==0.37.0",
    "numpy>=2.0.0",
    "Pillow>=10.4.0",
    "safetensors>=0.4.0",
    "sentencepiece>=0.2.0",
    "torch==2.10.0",
    "torchvision==0.25.0",
    "transformers>=5.4.0",
]

[tool.uv]
package = false
